render whitespace in comment correctly

--- a/anywhere-chrome-extension/src/popup/popup.css
+++ b/anywhere-chrome-extension/src/popup/popup.css
@@ -32,6 +32,7 @@
 
 .comment-text {
   margin-bottom: 10px;
+  white-space: pre;
 }
 
 .comment-form {
